<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://adnroid.com"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_dark"
    >

    <ScrollView
        android:id="@+id/loftScroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="160dp"

            >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="24dp"
            android:paddingBottom="12dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:background="@color/card_bg"
            >
            <ImageView
                android:id="@+id/imgLogo"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/logo" />
        </LinearLayout>

            <TextView
                android:id="@+id/txtBreadcrumbs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:text="@string/loft_breadcrumbs"
                android:textColor="@color/text_light"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/imgLoft"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:layout_marginTop="36dp"
                android:scaleType="centerCrop"
                android:src="@drawable/main_image_1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loft_descrp"
                android:textColor="@color/text_gray"
                android:textSize="14sp"
                android:layout_marginTop="24dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp" />


            <TextView
                android:id="@+id/txtBreadcrumbs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="¿Qué hay en dentro?"
                android:textColor="@color/text_light"
                android:textSize="36sp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:alpha="0.6"
                />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="12dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loft_specs_bed"
                android:textColor="@color/text_gray"
                android:textSize="14sp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loft_specs_cond"
                android:textColor="@color/text_gray"
                android:textSize="14sp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"

                />
        </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="12dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/loft_specs_wifi"
                    android:textColor="@color/text_gray"
                    android:textSize="14sp"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/loft_specs_pers"
                    android:textColor="@color/text_gray"
                    android:textSize="14sp"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:background="@color/card_bg"
                android:layout_marginTop="32dp"
                >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="$130"
                        android:textColor="@color/text_light"
                        android:textSize="36sp"
                        android:alpha="1" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="por noche"
                        android:textColor="@color/text_light"
                        android:textSize="12sp"
                        android:alpha="0.6" />
                </LinearLayout>
                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1" />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"

                    >
                    <ImageView
                        android:id="@+id/imgLoft"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="12dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ava_1" />
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginTop="8dp"
                        >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Isabella Sánchez"
                        android:textColor="@color/text_light"
                        android:textSize="18sp"
                        android:alpha="1" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="admin/manager"
                            android:textColor="@color/text_light"
                            android:textSize="12sp"
                            android:alpha="0.6"
                            android:layout_marginTop="4dp"
                            />
                    </LinearLayout>
                </LinearLayout>



            </LinearLayout>


            <LinearLayout
                android:id="@+id/dynamicInvoiceContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginRight="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="12dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="24dp"
            android:paddingBottom="12dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            >
            <LinearLayout
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_marginEnd="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Fecha de entrada"
                    android:textColor="@color/text_light"
                    android:textSize="12sp"
                    android:alpha="0.6" />

                <EditText
                    android:id="@+id/inputCheckIn"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="4dp"
                    android:hint="20/09/2026"
                    android:textColorHint="#4DFFFFFF"
                    android:textColor="@color/text_light"
                    android:backgroundTint="@color/orange_premium"
                    android:focusable="false"
                    android:clickable="true"
                    android:textSize="14sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_marginStart="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Cantidad de noches"
                    android:textColor="@color/text_light"
                    android:textSize="12sp"
                    android:alpha="0.6" />

                <EditText
                    android:id="@+id/inputNights"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="4dp"
                    android:hint="7"
                    android:textColorHint="#4DFFFFFF"
                    android:textColor="@color/text_light"
                    android:backgroundTint="@color/orange_premium"
                    android:inputType="number"
                android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="0dp"
            android:paddingBottom="12dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            >

            <LinearLayout
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_marginEnd="8dp"
                >
                <TextView
                    android:id="@+id/lblCalculationDetails"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="$130 x 7 noches"
                    android:textColor="@color/text_light"
                    android:textSize="12sp"
                    android:alpha="0.6" />
                <TextView
                    android:id="@+id/lblTotalResult"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TOTAL: $910"
                    android:textColor="@color/text_light"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginTop="4dp"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_marginStart="8dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Las fechas"
                    android:textColor="@color/text_light"
                    android:textSize="11sp"
                    android:alpha="0.5" />
                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1" />
                <TextView
                    android:id="@+id/lblStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="DISPONIBLE"
                    android:textColor="@color/orange_premium"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginTop="4dp" />
            </LinearLayout>

        </LinearLayout>

            <Button
                android:id="@+id/btnReserve"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="20dp"
                android:text="Reservar"
                android:backgroundTint="@color/orange_premium"
                android:textColor="@color/text_light"
                android:textSize="16sp"
                android:textStyle="bold"
                app:cornerRadius="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                />

        </LinearLayout>



    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>